2002-03-11  James Henstridge  <james@daa.com.au>

	* autogen.sh: call libtoolize.

	* acinclude.m4, ltconfig, ltmain.sh: remove this file -- get
	libtool from aclocal and libtoolize (it is currently using
	libtool-1.2f, which is ancient).

	* configure.in: use an automake conditional to say whether we are
	building esddsp and esdplay.
	(GETOPT_OBJS): esound's configure wasn't using LIBOBJS subtitution
	correctly, which causes build problems with autoconf-2.53.  So
	just use another env var.

	* Makefile.am (INCLUDES): get rid of extra variable declarations
	that automake would automatically add.

2002-03-01  Havoc Pennington  <hp@redhat.com>

	* configure.in: 0.2.24

2002-03-01  Havoc Pennington  <hp@redhat.com>

	* players.c (read_player): Apply patch from
	mchapman@student.usyd.edu.au to reduce choppiness; see 
	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=55877

	* clients.c: another bit of the patch
	
Thu Jan 10 11:21:28 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: @AUDIOFILE_LIBS@ already includes -lm so
	don't add it again.

Tue Sep 04 16:28:11 2001  George Lebl <jirka@5z.com>

	* configure.in, Makefile.am, esound.pc.in: add a pkg-config file

2001-07-13  Alex Larsson  <alexl@redhat.com>

	* esdlib.c:
	* esd.c:
	Fix esd launch race condition. USR1 could arrive before pause()
	leading to a 10 second pause.

2001-07-07  Drazen Kacar  <dave@arsdigita.com>

	* configure.in: Check whether the C compiler supports inline.

	* audio_solaris.c: Recognize SUNW,audiots as supported device.
	Make explicit checks for all devices we know we don't support.
	If we encounter unknown device, print out the warning, but
	attempt to use it. Added EINTR wrappers all around the place.
	Added checks for more esd devices (ports in Solaris terminology).
	Added flush function.

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Added esd-config.in to EXTRA_DIST.
	
2001-03-26  Darin Adler  <darin@eazel.com>

	* docs/.cvsignore: Ignore Makefile.
